benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_Mul_Add_iter2_error.log
=== Verification Error - Iteration 2 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_Mul_Add.rs
Time: 2025-09-15 20:14:27

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:30:17
   |
30 |     2nat * pow2(n - 1)
   |            ---- ^^^^^ expected `nat`, found `int`
   |            |
   |            arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:24:9
   |
24 | spec fn pow2(n: nat) -> nat
   |         ^^^^ ------

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:52:12
   |
52 |       if a@[a.len() - 1 - i] == '1' {
   |            ^^^^^^^^^^^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:61:12
   |
61 |       if b@[b.len() - 1 - i] == '1' {
   |            ^^^^^^^^^^^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:130:30
    |
130 |   while res.len() > 1 && res@[0] == '0' {
    |                              ^^^

error[E0599]: no method named `erase` found for struct `std::vec::Vec<char>` in the current scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:131:9
    |
131 |     res.erase(0);
    |         ^^^^^ method not found in `Vec<char>`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0599, E0608.
For more information about an error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:30:17
   |
30 |     2nat * pow2(n - 1)
   |            ---- ^^^^^ expected `nat`, found `int`
   |            |
   |            arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:24:9
   |
24 | spec fn pow2(n: nat) -> nat
   |         ^^^^ ------

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:52:12
   |
52 |       if a@[a.len() - 1 - i] == '1' {
   |            ^^^^^^^^^^^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:61:12
   |
61 |       if b@[b.len() - 1 - i] == '1' {
   |            ^^^^^^^^^^^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:130:30
    |
130 |   while res.len() > 1 && res@[0] == '0' {
    |                              ^^^

error[E0599]: no method named `erase` found for struct `std::vec::Vec<char>` in the current scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:131:9
    |
131 |     res.erase(0);
    |         ^^^^^ method not found in `Vec<char>`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0599, E0608.
For more information about an error, try `rustc --explain E0308`.
